# milk

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  train_milk10k_transformer.py
checkpoints/: README.md
configs/: README.md  classes.json  dataset_registry.yaml  default_training.yaml  label_mappings.yaml
data/: README.md
data/bcn20000/: README.md
data/ddi/: README.md
data/ddi2/: README.md
data/derm12345/: README.md
data/derm7pt/: README.md
data/edinburgh_dermofit/: README.md
data/ham10000/: README.md
data/isic2019/: README.md
data/isic2020/: README.md
data/isic2024_slice3d/: README.md
data/mednode/: README.md
data/milk10k/: README.md
data/mn187/: README.md
data/pad_ufes_20/: README.md
data/ph2/: README.md
data/scin/: README.md
data/synthetic_gan_isic2019/: README.md
docs/: README.md  architecture.md  csv_schema.md  dataset_guide.md  inference_and_submission.md  original_requirements.md  training_protocol.md
examples/: README.md
examples/tiny_debug/: README.md
logs/: README.md
notebooks/: README.md
outputs/: README.md
scripts/: README.md  create_project_tree.py  run_tiny_debug.py  run_training.sh  summarize_dataset.py  validate_csvs.py
templates/: README.md
templates/csv/: README.md  binary_external_template.csv  external_clinical_template.csv  external_dermoscopy_template.csv  milk10k_test_template.csv  milk10k_train_template.csv  paired_external_template.csv  synthetic_gan_template.csv
tests/: README.md  test_static_contract.py
(+44 files in other folders)
