[project]
name = "milktriformer-milk10k"
version = "0.1.0"
description = "Transformer-based multimodal MILK10k skin lesion classification training pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9.12",
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
